--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node  app.js"
+    "start": "nodemon  app.js"
   },
   "author": "Naresh C",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "firebase": "^10.9.0",
+    "nodemon": "^3.1.0",
     "uuid": "^9.0.1"
   }
 }
